--- a/confif-project/test-output/old/Suite/methods.html
+++ b/confif-project/test-output/old/Suite/methods.html
@@ -1,6 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96a8a1">  <td>19/12/29 13:10:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Simple.setup()[pri:0, instance:Simple@5e4c8041]">setup</td> 
-  <td>main@1237550792</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/16 22:34:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:MultiThread1@501edcf1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1196882538</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/16 22:34:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:MultiThread1@501edcf1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1196882538</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>20/01/16 22:34:53</td>   <td>8533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiThread1.alaunchGuru()[pri:0, instance:MultiThread1@501edcf1]">alaunchGuru</td> 
+  <td>TestNG-test=Test-2@2029199229</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>20/01/16 22:34:53</td>   <td>8533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiThread1.blaunchLinkedIn()[pri:0, instance:MultiThread1@501edcf1]">blaunchLinkedIn</td> 
+  <td>TestNG-test=Test-1@1262721153</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/16 22:35:55</td>   <td>71012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiThread.tearDown()[pri:0, instance:MultiThread1@501edcf1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@2029199229</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/16 22:35:56</td>   <td>71962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:MultiThread1@501edcf1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1196882538</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>20/01/16 22:36:01</td>   <td>76688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiThread1.claunchFB()[pri:0, instance:MultiThread1@501edcf1]">claunchFB</td> 
+  <td>TestNG-test=Test-3@1196882538</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/16 22:36:09</td>   <td>85076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiThread.tearDown()[pri:0, instance:MultiThread1@501edcf1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@2029199229</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>20/01/16 22:36:10</td>   <td>85765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiThread.tearDown()[pri:0, instance:MultiThread1@501edcf1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@2029199229</td>   <td></td> </tr>
 </table>
