--- a/confif-project/test-output/emailable-report.html
+++ b/confif-project/test-output/emailable-report.html
@@ -9,17 +9,9 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">52,850</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test1</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">0</td><td class="num">111,255</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Mukhya</td><td><a href="#m0">firsttest</a></td><td rowspan="1">1584650541573</td><td rowspan="1">52064</td></tr><tr><th colspan="4">Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Mukhya</td><td><a href="#m1">secondtest</a></td><td rowspan="1">1584650541573</td><td rowspan="1">36734</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test1 &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="2">Mukhya</td><td><a href="#m0">pcvNew</a></td><td rowspan="2">1585150160576</td><td rowspan="2">29852</td></tr><tr class="retriedeven"><td><a href="#m1">pcvNew</a></td></tr></tbody>
 </table>
-<h2>Test1</h2><h3 id="m0">Mukhya#firsttest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://ipartner.icicilombard.com</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at FirstClassT.first(FirstClassT.java:42)
-	at Mukhya.firsttest(Mukhya.java:25)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
-	at java.base/java.lang.Thread.run(Thread.java:830)
-... Removed 12 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Mukhya#secondtest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://ipartner.icicilombard.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-</body>
+<h2>Test1</h2></body>
 </html>
