--- a/confif-project/test-output/old/Suite/methods-alphabetical.html
+++ b/confif-project/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ba3fb">  <td>20/03/20 02:12:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mukhya.firsttest(java.lang.String)[pri:0, instance:Mukhya@7692d9cc]">firsttest</td> 
-  <td>TestNG-test=Test1-1@1806488528</td>   <td></td> </tr>
-<tr bgcolor="9ba3fb">  <td>20/03/20 02:12:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mukhya.secondtest(java.lang.String)[pri:0, instance:Mukhya@7692d9cc]">secondtest</td> 
-  <td>TestNG-test=Test1-2@2027218554</td>   <td></td> </tr>
-<tr bgcolor="61c7e3">  <td>20/03/20 02:12:21</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:Mukhya@7692d9cc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test1-1@1806488528</td>   <td></td> </tr>
-<tr bgcolor="61c7e3">  <td>20/03/20 02:12:21</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:Mukhya@7692d9cc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test1-1@1806488528</td>   <td></td> </tr>
+<tr bgcolor="8586d6">  <td>20/03/25 20:58:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mukhya.pcvNew(java.lang.String)[pri:0, instance:Mukhya@7748410a]">pcvNew</td> 
+  <td>TestNG-test=Test1-1@983963438</td>   <td></td> </tr>
+<tr bgcolor="8586d6">  <td>20/03/25 20:59:20</td>   <td>35214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mukhya.pcvNew(java.lang.String)[pri:0, instance:Mukhya@7748410a]">pcvNew</td> 
+  <td>TestNG-test=Test1-1@983963438</td>   <td></td> </tr>
+<tr bgcolor="8586d6">  <td>20/03/25 20:59:50</td>   <td>65154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mukhya.pcvNew(java.lang.String)[pri:0, instance:Mukhya@7748410a]">pcvNew</td> 
+  <td>TestNG-test=Test1-1@983963438</td>   <td></td> </tr>
+<tr bgcolor="da8e68">  <td>20/03/25 20:58:45</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:Mukhya@7748410a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-1@983963438</td>   <td></td> </tr>
+<tr bgcolor="da8e68">  <td>20/03/25 20:59:20</td>   <td>35213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:Mukhya@7748410a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-1@983963438</td>   <td></td> </tr>
+<tr bgcolor="da8e68">  <td>20/03/25 20:59:50</td>   <td>65153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiThread.setup()[pri:0, instance:Mukhya@7748410a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test1-1@983963438</td>   <td></td> </tr>
 </table>
